--- a/index.html
+++ b/index.html
@@ -18,20 +18,224 @@
 </head>
 <body>
   <!-- Navegação -->
+   <nav>
+    <ul class="navlist">
+      <li class="active"><a href="#home">Início</a></li>
+      <li><a href="#about">Sobre</a></li>
+      <li><a href="#skills">Habilidades</a></li>
+      <li><a href="#projects">Projetos</a></li>
+      <li><a href="#contact">Contato</a></li>
+    </ul>
   
+   <div>
+    <ul class="social-network">
+      <li>
+        <div id="switch" onclick="toggleMode()">
+          <button></button>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/rayanne-picini-da-silva-0837ab355" target="_blank">
+          <figure id="fig1"></figure>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/RayanneP" target="_blank">
+          <figure id="fig2"></figure>
+        </a>
+      </li>
+    </ul>
+   </div>
+
+   <!--Ícone do menu mobile-->
+   <div class="bx bx-menu" id="menu-icon"></div>
+  </nav>
+
   <!-- Conteúdo principal -->
   <main>
     <!-- Seção Home -->
+     <section id="home" class="home">
+      <div class="home-presentation">
+        <p class="my-name">meu nome é</p>
+        <h1 id="name">Rayanne</h1>
+        <h1 id="last-name">Picini</h1>
+        <h3><p>sou</p> Desenvolvedora web <span><strong>|</strong> Front-end</span></h3>
+        <div class="button">
+          <a href="#projects" class="project-button">Projetos</a>
+          <a href="#contact" class="contact-button">Contato</a>
+        </div>
+      </div>
+      <img class="home-mac" src="./img/principal1.jpg" alt="laptop">
+     </section>
     
     <!-- Seção Sobre Mim -->
+     <section class="about" id="about">
+      <div class="about-img">
+        <img src="https://media.licdn.com/dms/image/v2/D4E03AQGm8vSegts9ew/profile-displayphoto-shrink_400_400/B4EZWHPsbhGwAg-/0/1741730794038?e=1748476800&v=beta&t=AnvEZDS-ZLIjcDVUBKMIq6Ddyo9McFsaxrqeCaVv6OY" alt="">
+      </div>
+      <div class="about-text">
+        <h2><span>SOBRE</span> MIM</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, reprehenderit corporis aperiam nostrum, quis numquam, rem ut voluptates cum suscipit odit explicabo nesciunt ullam ratione? Necessitatibus reprehenderit iusto doloremque blanditiis?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, fugiat soluta? Quos aspernatur minus neque impedit a! Amet ipsa veniam aliquid blanditiis officia, nam aliquam natus maxime tempora, iste tenetur.
+        </p>
+        <button class="button-cv">
+          <a href="assets/curriculo-front-end.pdf" download="CV - CodeMaster Dev" class="btn-cv">Download CV</a>
+        </button>
+      </div>
+      <img src="img/balls.svg" alt="balls" class="balls">
+     </section>
+
+     <!-- Seção Habilidades --> 
+<section class="skills" id="skills"> 
+  <div class="line"></div> 
+  <div class="tech"> 
+  <h2>TECNOLOGIAS</h2> 
+  <div class="techs"> 
+  <div class="card"> 
+  <img src="./img/html-icon.svg" alt="icone html"> 
+  <p>HTML</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/css-icon.svg" alt="icone css"> 
+  <p>CSS</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/js-icon.svg" alt="icone javascript"> 
+  <p>JavaScript</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/react-js-icon.svg" alt="icone react.js"> 
+  <p>React.js</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/node-js-icon.svg" alt="icone node.js"> 
+  <p>Node.js</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/python-icon.svg" alt="icone python"> 
+  <p>Python</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/sql-icon.svg" alt="icone sql"> 
+  <p>SQL</p> 
+  </div> 
+  <div class="card"> 
+  <img src="./img/git-icon.svg" alt="icone git"> 
+  <p>Git</p> 
+  </div> 
+</div> 
+</div>
+<div class="line"></div>
+<div class="tool">
+  <h2>FERRAMENTAS</h2>
+  <div class="tools">
+    <div class="card">
+      <img src="img/git-icon.svg" alt="icone github">
+     <p>GitHub</p>
+    </div>
+    <div class="card">
+      <img src="img/vs-code-icon.svg" alt="vs code icone">
+      <p>VScode</p>
+    </div>
+      <div class="card">
+        <img src="img/figma-icon.svg" alt="icone figma">
+        <p>figma</p>
+      </div>
+      <div class="card">
+         <img src="img/notion-icon.svg" alt="notion icone">
+      <p>Notion</p>
+        </div>
+  </div>
+</div>
+   </section>
   
     <!-- Seção de Projetos -->
+     <section id="projects" class="projects">
+      <div class="line"></div>
+      <div class="main-text">
+        <h2>Meus <span>Projetos</span></h2>
+      </div>
+      <!--Container do carrossel-->
+      <div class="carousel-container"></div>
+      <!--Botões de navegação-->
+      <button class="carousel-button prev" aria-label="Projeto anterior">&#10094</button>
+      <button class="carousel-button next" aria-label="Próximo projeto">&#10095</button>
+      <!--Slides do carrossel-->
+      <div class="carousel-slides">
+        <!--Slide 1 - Login -->
+        <div class="carousel-slide active">
+          <div class="row">
+            <img src="img/login-land-rover.png" alt="print pagina de login">
+            <div class="layer">
+              <h5>Tela de login</h5>
+              <p>Esse repositório e uma atualização/melhoria do repositório anterior "formulario-login". Nele utilizo apenas HTML e CSS</p>
+            </div>
+          </div>
+        </div>
+        <!--Slide 2 - Cronômetro -->
+        <div class="carousel-slide">
+          <div class="row">
+            <img src="img/cronometro.png" alt="print cronometro">
+            <div class="layer">
+              <h5>Relógio Digital</h5>
+              <p>Desenvolvido um relógio digital utilizado HTML, CSS e JS.</p>
+            </div>
+          </div>
+        </div>
+        <!--Slide 3 - Formulário -->
+        <div class="carousel-slide">
+          <div class="row">
+            <img src="img/form.png" alt="pagina de form">
+            <div class="layer">
+              <h5>Formulário de avaliação</h5>
+              <p>Desenvolvido formulário de avaliaçao da mentoria</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
    
     <!-- Seção de Contato -->
-
+     <section class="contact" id="contact">
+      <div class="contact-text">
+        <div class="main-text">
+          <h2>Entre em <span>Contato</span></h2>
+        </div>
+      </div>
+      <div class="contact-form">
+        <form id="contactForm" action="https://formsubmit.co/rayannepicinidasilva@gmail.com" method="post">
+          <input type="text" name="name" placeholder="Digite seu nome" required>
+          <input type="email" name="email" placeholder="Digite seu melhor email" required>
+          <input type="hidden" name="_captcha" value="false">
+          <textarea type="text" name="text" cols="35" rows="10" placeholder="Como eu posso te ajudar?" required></textarea>
+          <br>
+          <input type="submit" value="Enviar" class="submit" required>
+        </form>
+        <!--Mensagem de agredecimento(Após enviar formulário)-->
+        <div id="thankYouMessage" class="thank-you-message">
+          Obrigada! Aguarde nosso retorno!
+        </div>
+      </div>
+     </section>
   </main>
 
   <!-- Rodapé -->
+   <section class="end">
+    <div class="last-text">
+      <p>by Rayanne Picini <img src="img/bussola.png" alt=""> Alguns direitos reservados.</p>
+    </div>
+
+    <div class="top">
+      <!--Seta adicionada do serviço: boxicons-->
+      <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+    </div>
+
+   </section>
 
   <!-- Scripts -->
   <script src="script.js"></script>
