--- a/index.html
+++ b/index.html
@@ -159,47 +159,47 @@
       <div class="main-text">
         <h2>Meus <span>Projetos</span></h2>
       </div>
-      <!--Container do carrossel-->
-      <div class="carousel-container"></div>
-      <!--Botões de navegação-->
-      <button class="carousel-button prev" aria-label="Projeto anterior">&#10094</button>
-      <button class="carousel-button next" aria-label="Próximo projeto">&#10095</button>
-      <!--Slides do carrossel-->
-      <div class="carousel-slides">
-        <!--Slide 1 - Login -->
-        <div class="carousel-slide active">
-          <div class="row">
-            <img src="img/login-land-rover.png" alt="print pagina de login">
-            <div class="layer">
-              <h5>Tela de login</h5>
-              <p>Esse repositório e uma atualização/melhoria do repositório anterior "formulario-login". Nele utilizo apenas HTML e CSS</p>
+            <!-- container do carrossel -->
+            <div class="carousel-container">
+              <!-- botões de navegação -->
+              <button class="carousel-button prev" aria-label="Projeto anterior">&#10094;</button>
+              <button class="carousel-button next" aria-label="Próximo projeto">&#10095;</button>
+              <!-- Slides do carrossel -->
+              <div class="carousel-slides">
+                <!-- Slide 1 -Login  -->
+                <div class="carousel-slide active">
+                  <div class="row">
+                    <img src="img/housemd.png" alt="print página com POO">
+                    <div class="layer">
+                      <h5>POO</h5>
+                      <p>Nesse repositório, foi utilizado o POO para a criação de vários objetos(funcionários do hospital) e que aparece em tela, junto à utilização de HTML e CSS</p>
+                    </div>
+                  </div>
+                </div>  
+                <!-- Slide 2 - Cronômetro -->
+                <div class="carousel-slide">
+                  <div class="row">
+                    <img src="img/cafe.png" alt="print cafeteria">
+                    <div class="layer">
+                      <h5>Página de uma Cafeteria</h5>
+                      <p>Desenvolmento de uma página web de uma cafeteria, utilizando HTML, CSS e JavaScript. </p>
+                    </div>
+                  </div>
+                </div>  
+                <!-- Slide 3 - Formulário -->
+                <div class="carousel-slide">
+                  <div class="row">
+                    <img src="img/Puung.png" alt="print página de form">
+                    <div class="layer">
+                      <h5>Página Exposição</h5>
+                      <p>Página desenvolvida para  que chamasse a atenção do usuário e faria-o se interessar pela exposição.</p>
+                    </div>
+                  </div>
+                </div>  
+              </div>
             </div>
-          </div>
-        </div>
-        <!--Slide 2 - Cronômetro -->
-        <div class="carousel-slide">
-          <div class="row">
-            <img src="img/cronometro.png" alt="print cronometro">
-            <div class="layer">
-              <h5>Relógio Digital</h5>
-              <p>Desenvolvido um relógio digital utilizado HTML, CSS e JS.</p>
-            </div>
-          </div>
-        </div>
-        <!--Slide 3 - Formulário -->
-        <div class="carousel-slide">
-          <div class="row">
-            <img src="img/form.png" alt="pagina de form">
-            <div class="layer">
-              <h5>Formulário de avaliação</h5>
-              <p>Desenvolvido formulário de avaliaçao da mentoria</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-   
+          </section>
+
     <!-- Seção de Contato -->
      <section class="contact" id="contact">
       <div class="contact-text">
